# hospital_management

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  makefile  requirements.txt  vercel.json
backend/: .dockerignore  .editorconfig  .gitignore  Dockerfile  banco_legal.db  pyproject.toml  requirements.txt  vercel.json
backend/project/application/service/: bed.py  client.py  hospital.py  patient.py  sector.py
backend/project/hospital_management/: main.py  routers.py
backend/project/hospital_management/controllers/: admission.py  average_free_time.py  bed.py  client.py  docs.py  hospital.py  patient.py  sector.py
backend/project/hospital_management/datasource/: client.py
backend/project/hospital_management/entities/: client.py
backend/project/hospital_management/insert_records_vercel/: insert_records.py
backend/project/hospital_management/schemas/: bed.py  client.py  sector.py
backend/project/hospital_management/service/: client.py
backend/project/hospital_management/settings/: database.py  settings.py
backend/project/shared/: dependencies.py
backend/project/shared/datasource/: admission.py  bed.py  client.py  hospital.py  patient.py  sector.py
backend/project/shared/entities/: entities.py
backend/project/shared/enum/: enums.py
backend/project/shared/exceptions/: exceptions.py
backend/records/: main.py
backend/tests/: conftest.py
backend/tests/bed/: bed_test.py
backend/tests/client/: client_test.py
backend/tests/sector/: sector_test.py
backend/tests/utils/: override_database.py
frontend/: makefile  pubspec.yaml
(+115 files in other folders)
